# flask_test

./: .gitignore  README.md  pyproject.toml
fin_app/: __init__.py  main.py
fin_app/db/: db_manager.py  db_scripts_DDL.py
fin_app/db_app/: db_scripts_DDL.py
fin_app/extra/: create_app.py
fin_app/models/: transaction.py  user.py
fin_app/routers/: base.py  transactions.py  users.py
fin_app/settings/: config.py
spec/: spec.md
